fix: container width issue on tablet

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -17,6 +17,7 @@
 
 	@include breakpoint-md {
 		align-items: stretch;
+		max-width: 100%;
 		padding: 0;
 	}
 }
